style: Fix checkstylemain issues